--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,8 +19,20 @@ android {
 }
 
 dependencies {
+    def lifecycle_version = '1.1.1'
+    def room_version = '1.1.1'
+    def butter_version = '8.8.1'
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation "com.jakewharton:butterknife:$butter_version"
+    implementation "android.arch.lifecycle:extensions:$lifecycle_version"
+    implementation "android.arch.persistence.room:runtime:$room_version"
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
+    annotationProcessor "android.arch.persistence.room:compiler:$room_version"
+    annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
+    annotationProcessor "com.jakewharton:butterknife-compiler:$butter_version"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
