--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,7 @@ dependencies {
     def butter_version = '8.8.1'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.jakewharton:butterknife:$butter_version"
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
