--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,15 +26,16 @@ dependencies {
     def lifecycle_version = '1.1.1'
     def room_version = '1.1.1'
     def butter_version = '8.8.1'
+    def support_lib_version = '26.1.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation "com.android.support:appcompat-v7:$support_lib_version"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation "com.jakewharton:butterknife:$butter_version"
     implementation "android.arch.lifecycle:extensions:$lifecycle_version"
     implementation "android.arch.persistence.room:runtime:$room_version"
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation "com.android.support:recyclerview-v7:$support_lib_version"
+    implementation "com.android.support:cardview-v7:$support_lib_version"
     annotationProcessor "android.arch.persistence.room:compiler:$room_version"
     annotationProcessor "android.arch.lifecycle:compiler:$lifecycle_version"
     annotationProcessor "com.jakewharton:butterknife-compiler:$butter_version"
